--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "fuel-eu-frontend",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -9,21 +10,22 @@
     "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.0.0",
     "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "recharts": "^2.5.0",
-    "@tanstack/react-query": "^5.0.0"
+    "recharts": "^2.15.4"
   },
   "devDependencies": {
-    "typescript": "^5.5.0",
-    "vite": "^5.0.0",
-    "tailwindcss": "^4.3.2",
-    "postcss": "^8.5.0",
-    "autoprefixer": "^10.4.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.0",
+    "tailwindcss": "^3.4.18",
+    "typescript": "^5.5.0",
+    "vite": "^7.2.6"
   }
 }
